fix overlap of buttons and change icon

--- a/csfieldguide/static/interactives/matrix-simplifier/scss/matrix-simplifier.scss
+++ b/csfieldguide/static/interactives/matrix-simplifier/scss/matrix-simplifier.scss
@@ -24,11 +24,20 @@
   &.held {
     cursor: grabbing;
   }
+  &.cover {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    z-index: 3;
+  }
 }
 
 .content {
   background-color: #fff;
   width: 70%;
+  padding-left: 24px;
+  padding-right: 20px;
 }
 
 .matrix, .vector {
